# AOC2025

./: Cargo.toml  flake.nix
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs
